syntax = "proto3";

package kafka_producer_grpc;

// service definition
service Kafka_Producer_gRPC{
    rpc Add_New_Location (Location) returns (Response) {}
    rpc Add_New_Topic (Topic) returns (Response) {}
}

message Topic{
    string udid = 1;
}

// request message
message Location{
    string udid = 1; // this is a field number, starts from 1
    string location = 2;
}

message Response{
    string udid = 1;
    bool success = 2;
}